--- a/code/PA1/apriori.ipynb
+++ b/code/PA1/apriori.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -11,8 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "lines = list(open('categories.txt'))"
@@ -20,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +46,110 @@
     "                word_index = cate_dict[word]\n",
     "            cate_index.append(word_index)\n",
     "        \n",
-    "        cate_lines.append(cate_index)"
+    "        cate_lines.append(set(cate_index))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MIN_SUPPORT = len(cate_lines) * 0.01\n",
+    "\n",
+    "def get_support(all_cates, sub_cates):\n",
+    "    support = 0\n",
+    "    for cate in all_cates:\n",
+    "        if cate.issuperset(sub_cates):\n",
+    "            support += 1\n",
+    "    \n",
+    "    return support\n",
+    "\n",
+    "L = []\n",
+    "S = []\n",
+    "L1 = []\n",
+    "S1 = []\n",
+    "for cate in range(0, len(cate_list)):\n",
+    "    s = get_support(cate_lines, [cate])    \n",
+    "    if(s >= MIN_SUPPORT):\n",
+    "        L1.append([cate])\n",
+    "        S1.append(s)\n",
+    "\n",
+    "L.append(L1)\n",
+    "S.append(S1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " def apriori_gen(all_cates, LK_1, min_support):\n",
+    "    LK = []\n",
+    "    S = []\n",
+    "    for l1 in LK_1:\n",
+    "        for l2 in LK_1:\n",
+    "            if l1[:-1] == l2[:-1] and l1[-1] != l2[-1]:\n",
+    "                l = l1 + [l2[-1]]\n",
+    "                support = get_support(all_cates, l)\n",
+    "                if support >= min_support:\n",
+    "                    LK.append(l)\n",
+    "                    S.append(support)\n",
+    "    \n",
+    "    return LK, S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on 1-Itemsets\n",
+      "Working on 2-Itemsets\n",
+      "Working on 3-Itemsets\n"
+     ]
+    }
+   ],
+   "source": [
+    "LK_1 = L1\n",
+    "while len(LK_1) > 0:\n",
+    "    print(\"Working on %d-Itemsets\" % len(LK_1[0]))\n",
+    "    LK_1, SK_1 = apriori_gen(cate_lines, LK_1, MIN_SUPPORT)\n",
+    "    if (len(LK_1) > 0):\n",
+    "        L.append(LK_1)\n",
+    "        S.append(SK_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('patterns_1.txt', 'w') as f:\n",
+    "    for i in range(0, len(L[0])):\n",
+    "        f.write(\"%d:%s\"%(S[0][i],cate_list[L[0][i][0]]))\n",
+    "        f.write(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('patterns_2.txt', 'w') as f:\n",
+    "    for i in range(0, len(L)):\n",
+    "        for j in range(0, len(L[i])):\n",
+    "            f.write(\"%d:%s\"%(S[i][j], cate_list[L[i][j][0]]))\n",
+    "            for k in range(1, i + 1):\n",
+    "                f.write(\";%s\"%cate_list[L[i][j][k]])\n",
+    "            f.write(\"\\n\")"
    ]
   }
  ],
