--- a/code/PA1/apriori.ipynb
+++ b/code/PA1/apriori.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
     "    S = []\n",
     "    for l1 in LK_1:\n",
     "        for l2 in LK_1:\n",
-    "            if l1[:-1] == l2[:-1] and l1[-1] != l2[-1]:\n",
+    "            if l1[:-1] == l2[:-1] and l1[-1] < l2[-1]:\n",
     "                l = l1 + [l2[-1]]\n",
     "                support = get_support(all_cates, l)\n",
     "                if support >= min_support:\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,6 +151,15 @@
     "                f.write(\";%s\"%cate_list[L[i][j][k]])\n",
     "            f.write(\"\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
