Done first round

--- a/code/PA2/con_apriori.ipynb
+++ b/code/PA2/con_apriori.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -548,7 +548,101 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 23%|██████████████████▎                                                             | 224/977 [19:08<55:46,  4.44s/it]"
+      " 25%|████████████████████▎                                                           | 248/977 [20:53<52:41,  4.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[374, 780]\n",
+      "113\n",
+      "['across', 'street']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 26%|████████████████████▌                                                           | 251/977 [21:06<51:56,  4.29s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[386, 826]\n",
+      "135\n",
+      "['one', 'favorite']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 34%|██████████████████████████▉                                                     | 329/977 [26:22<41:32,  3.85s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[536, 5635]\n",
+      "122\n",
+      "['giant', 'eagle']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 52%|█████████████████████████████████████████▎                                      | 505/977 [35:54<21:43,  2.76s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[926, 927]\n",
+      "103\n",
+      "['reasonably', 'priced']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 92%|█████████████████████████████████████████████████████████████████████████▌      | 898/977 [46:37<00:36,  2.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3047, 7363]\n",
+      "100\n",
+      "['pasta', 'trio']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 977/977 [46:55<00:00,  2.88s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working on 2-Itemsets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 31/31 [00:00<00:00, 839.97it/s]\n"
      ]
     }
    ],
@@ -564,20 +658,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[7, 8],\n",
+       " [16, 32],\n",
+       " [16, 39],\n",
+       " [16, 45],\n",
+       " [32, 39],\n",
+       " [32, 46],\n",
+       " [32, 77],\n",
+       " [38, 39],\n",
+       " [39, 45],\n",
+       " [45, 46],\n",
+       " [46, 250],\n",
+       " [54, 93],\n",
+       " [58, 309],\n",
+       " [65, 66],\n",
+       " [67, 91],\n",
+       " [101, 128],\n",
+       " [101, 177],\n",
+       " [128, 391],\n",
+       " [129, 391],\n",
+       " [140, 141],\n",
+       " [143, 1500],\n",
+       " [151, 152],\n",
+       " [176, 177],\n",
+       " [248, 391],\n",
+       " [275, 368],\n",
+       " [313, 5601],\n",
+       " [374, 780],\n",
+       " [386, 826],\n",
+       " [536, 5635],\n",
+       " [926, 927],\n",
+       " [3047, 7363]]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('patterns.txt', 'w') as f:\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(len(L[i])):\n",
+    "            f.write(\"%d:\"%(S[i][j]))\n",
+    "            for k in range(len(L[i][j]) - 1):\n",
+    "                f.write(\"%s;\"%(vocab_list[L[i][j][k]]))\n",
+    "            f.write(\"%s\\n\"%(vocab_list[L[i][j][len(L[i][j]) - 1]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "with open('patterns.txt', 'w') as f:\n",
-    "    for i in range(len(L)):\n",
-    "        for j in range(len(L[i]))\n",
-    "            f.write(\"%d:\"%(S[i][j]))\n",
-    "            for k in range(len(L[i][j] - 1)):\n",
-    "                f.write(\"%s;\"%(vocab_list[L[i][j][k]]))\n",
-    "            f.write(\"%s\\n\"%(vocab_list[L[i][j][len(L[i][j] - 1)]]))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
