--- a/code/PA2/con_apriori.ipynb
+++ b/code/PA2/con_apriori.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +165,7 @@
     "    S = []\n",
     "    for l1 in tqdm(LK_1):\n",
     "        for l2 in LK_1:\n",
-    "            if l1[:-1] == l2[:-1] and l1[-1] < l2[-1]:\n",
+    "            if l1[:-1] == l2[:-1]: #and l1[-1] < l2[-1]:\n",
     "                l = l1 + [l2[-1]]\n",
     "                support = get_support(all_lines, l)\n",
     "                if support >= min_support:\n",
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -194,455 +194,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|▎                                                                               | 4/977 [00:22<1:30:34,  5.59s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 8]\n",
-      "170\n",
-      "['year', 'ago']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  1%|▊                                                                              | 10/977 [00:57<1:37:18,  6.04s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[16, 32]\n",
-      "246\n",
-      "['food', 'good']\n",
-      "[16, 39]\n",
-      "118\n",
-      "['food', 'service']\n",
-      "[16, 45]\n",
-      "163\n",
-      "['food', 'great']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  2%|█▊                                                                             | 23/977 [02:11<1:27:42,  5.52s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[32, 39]\n",
-      "147\n",
-      "['good', 'service']\n",
-      "[32, 46]\n",
-      "109\n",
-      "['good', 'place']\n",
-      "[32, 77]\n",
-      "108\n",
-      "['good', 'thing']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  3%|██                                                                             | 26/977 [02:27<1:26:51,  5.48s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[38, 39]\n",
-      "209\n",
-      "['customer', 'service']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
       "\r",
-      "  3%|██▏                                                                            | 27/977 [02:33<1:26:29,  5.46s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[39, 45]\n",
-      "135\n",
-      "['service', 'great']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  3%|██▌                                                                            | 32/977 [02:59<1:24:24,  5.36s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[45, 46]\n",
-      "273\n",
-      "['great', 'place']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "  3%|██▋                                                                            | 33/977 [03:05<1:24:33,  5.37s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[46, 250]\n",
-      "131\n",
-      "['place', 'get']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|███                                                                            | 38/977 [03:32<1:25:03,  5.44s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[54, 93]\n",
-      "154\n",
-      "['staff', 'friendly']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  4%|███▍                                                                           | 42/977 [03:54<1:24:17,  5.41s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[58, 309]\n",
-      "211\n",
-      "['make', 'sure']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|███▊                                                                           | 47/977 [04:20<1:22:24,  5.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[65, 66]\n",
-      "220\n",
-      "['ice', 'cream']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  5%|███▉                                                                           | 49/977 [04:30<1:21:16,  5.25s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[67, 91]\n",
-      "111\n",
-      "['really', 'nice']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  7%|█████▋                                                                         | 70/977 [06:19<1:16:56,  5.09s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[101, 128]\n",
-      "130\n",
-      "['would', 'definitely']\n",
-      "[101, 177]\n",
-      "133\n",
-      "['would', 'recommend']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 10%|███████▌                                                                       | 93/977 [08:23<1:20:11,  5.44s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[128, 391]\n",
-      "140\n",
-      "['definitely', 'back']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      " 10%|███████▌                                                                       | 94/977 [08:29<1:20:15,  5.45s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[129, 391]\n",
-      "237\n",
-      "['come', 'back']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 11%|████████▎                                                                     | 104/977 [09:23<1:18:20,  5.38s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[140, 141]\n",
-      "141\n",
-      "['pretty', 'much']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 11%|████████▌                                                                     | 107/977 [09:39<1:17:31,  5.35s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[143, 1500]\n",
-      "125\n",
-      "['hot', 'dog']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 12%|█████████                                                                     | 113/977 [10:11<1:16:35,  5.32s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[151, 152]\n",
-      "107\n",
-      "['fish', 'sandwich']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 14%|██████████▊                                                                   | 136/977 [12:10<1:12:20,  5.16s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[176, 177]\n",
-      "215\n",
-      "['highly', 'recommend']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 18%|██████████████▎                                                               | 180/977 [15:46<1:03:50,  4.81s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[248, 391]\n",
-      "152\n",
-      "['going', 'back']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 20%|███████████████▍                                                              | 194/977 [16:52<1:01:01,  4.68s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[275, 368]\n",
-      "253\n",
-      "['even', 'though']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 22%|█████████████████▎                                                              | 211/977 [18:09<57:26,  4.50s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[313, 5601]\n",
-      "153\n",
-      "['strip', 'district']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 25%|████████████████████▎                                                           | 248/977 [20:53<52:41,  4.34s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[374, 780]\n",
-      "113\n",
-      "['across', 'street']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 26%|████████████████████▌                                                           | 251/977 [21:06<51:56,  4.29s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[386, 826]\n",
-      "135\n",
-      "['one', 'favorite']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 34%|██████████████████████████▉                                                     | 329/977 [26:22<41:32,  3.85s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[536, 5635]\n",
-      "122\n",
-      "['giant', 'eagle']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 52%|█████████████████████████████████████████▎                                      | 505/977 [35:54<21:43,  2.76s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[926, 927]\n",
-      "103\n",
-      "['reasonably', 'priced']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 92%|█████████████████████████████████████████████████████████████████████████▌      | 898/977 [46:37<00:36,  2.18it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3047, 7363]\n",
-      "100\n",
-      "['pasta', 'trio']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████████| 977/977 [46:55<00:00,  2.88s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Working on 2-Itemsets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████| 31/31 [00:00<00:00, 839.97it/s]\n"
+      "  0%|                                                                                          | 0/977 [00:00<?, ?it/s]"
      ]
     }
    ],
