--- a/code/PA3/k_mean.ipynb
+++ b/code/PA3/k_mean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 276,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 277,
    "metadata": {
     "collapsed": true
    },
@@ -25,110 +25,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 311,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def calc_distance(coord_1, coord_2):\n",
-    "    return np.linalg.norm(coord_1 - coord_2)"
+    "    return np.linalg.norm(coord_1 - coord_2)\n",
+    "\n",
+    "def calc_sse(points, centroid):\n",
+    "    sse = 0\n",
+    "    for i in range(0, points.shape[0]):\n",
+    "        sse += calc_distance(points[i], centroid) ** 2\n",
+    "    \n",
+    "    return sse"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0057423847746492481"
-      ]
-     },
-     "execution_count": 193,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calc_distance(coordinates[0], coordinates[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def k_mean(data, k, repeat = 3):\n",
-    "    centroids = np.random.uniform(np.min(data), np.max(data), (k, data.shape[1]))\n",
-    "    #centroids = pd.DataFrame(data = data[:k])\n",
-    "    #for i in range(0, data.shape[1]):\n",
-    "    #    centroids[i] = np.random.uniform(np.min(data), np.max(data), k)\n",
-    "    cluster = {}\n",
-    "    for i in range(0, k):\n",
-    "        cluster[i] = set()\n",
-    "    \n",
+    "def k_mean(data, k, repeat = 10):\n",
+    "    centroids = coordinates[np.random.randint(0, data.shape[0] - 1, k)]\n",
+    "    #centroids = sorted(centroids, key=lambda a: a[1])\n",
+    "    clusters = []\n",
+    "    SSEs = []\n",
     "    dist = np.zeros(k)\n",
-    "    new_centroids = np.zeros((k, data.shape[1]))\n",
-    "    for i in range(0, data.shape[0]):        \n",
-    "        for j in range(0, k):\n",
-    "            dist[j] = calc_distance(data[i], centroids[j])\n",
-    "        cluster_id = np.argmin(dist)\n",
-    "        cluster[cluster_id].add(i)\n",
-    "        new_centroids[cluster_id] += data[i]\n",
     "    \n",
-    "    for i in range(0, k):\n",
-    "        centroids[i] = new_centroids[i] / len(cluster[i])\n",
+    "    for r in range(0, repeat):\n",
+    "        print(\"Repeat:\", r)\n",
+    "        clusters.append({})\n",
+    "        SSEs.append(-1)\n",
+    "        sse_change = 100\n",
+    "\n",
+    "        while sse_change > 1e-10:\n",
+    "            new_centroids = np.zeros((k, data.shape[1]))\n",
+    "            clusters[r] = {}\n",
+    "            for i in range(0, k):\n",
+    "                clusters[r][i] = set()\n",
+    "\n",
+    "            for i in range(0, data.shape[0]):        \n",
+    "                for j in range(0, k):\n",
+    "                    dist[j] = calc_distance(data[i], centroids[j])\n",
+    "                cluster_id = np.argmin(dist)\n",
+    "                clusters[r][cluster_id].add(i)\n",
+    "                new_centroids[cluster_id] += data[i]\n",
+    "\n",
+    "            for i in range(0, k):\n",
+    "                new_centroids[i] = new_centroids[i] / len(clusters[r][i])\n",
+    "\n",
+    "            #centroids_diff = np.sum(np.abs(centroids - new_centroids))\n",
+    "            #print(centroids_diff)\n",
+    "            centroids = new_centroids\n",
+    "\n",
+    "            new_sse = 0\n",
+    "            for i in range(0, k):\n",
+    "                new_sse += calc_sse(data[list(clusters[r][i]),], centroids[i])\n",
+    "\n",
+    "            if SSEs[r] < 0:\n",
+    "                sse_change = new_sse\n",
+    "            else:\n",
+    "                sse_change = SSEs[r] - new_sse\n",
+    "\n",
+    "            SSEs[r] = new_sse\n",
+    "            print('sse:', SSEs[r], 'sse_change', sse_change)\n",
     "    \n",
-    "    return cluster"
+    "    return clusters[np.argmin(SSEs)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\geesi\\Anaconda3\\envs\\dlnd\\lib\\site-packages\\ipykernel_launcher.py:20: RuntimeWarning: invalid value encountered in true_divide\n"
+      "Repeat: 0\n",
+      "sse: 48911.9967339 sse_change 48911.9967339\n",
+      "sse: 1841.24251939 sse_change 47070.7542145\n",
+      "sse: 0.257567978235 sse_change 1840.98495141\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 1\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 2\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 3\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 4\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 5\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 6\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 7\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 8\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n",
+      "Repeat: 9\n",
+      "sse: 0.257567978235 sse_change 0.257567978235\n",
+      "sse: 0.257567978235 sse_change 0.0\n"
      ]
     }
    ],
    "source": [
     "a=k_mean(coordinates, 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7.4997988356360032"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "calc_distance(coordinates.iloc[0],a[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_centroids = np.zeros((k, coordinates.shape[1]))"
    ]
   }
  ],
