--- a/code/PA5/PD5.ipynb
+++ b/code/PA5/PD5.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -19,141 +21,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        1\n",
-       "1        2\n",
-       "2        3\n",
-       "3        4\n",
-       "4        5\n",
-       "5        6\n",
-       "6        7\n",
-       "7        8\n",
-       "8        9\n",
-       "9       10\n",
-       "10      11\n",
-       "11      12\n",
-       "12      13\n",
-       "13      14\n",
-       "14      15\n",
-       "15      16\n",
-       "16      17\n",
-       "17      18\n",
-       "18      19\n",
-       "19      20\n",
-       "20      21\n",
-       "21      22\n",
-       "22      23\n",
-       "23      24\n",
-       "24      25\n",
-       "25      26\n",
-       "26      27\n",
-       "27      28\n",
-       "28      29\n",
-       "29      30\n",
-       "      ... \n",
-       "270    271\n",
-       "271    272\n",
-       "272    273\n",
-       "273    274\n",
-       "274    275\n",
-       "275    276\n",
-       "276    277\n",
-       "277    278\n",
-       "278    279\n",
-       "279    280\n",
-       "280    281\n",
-       "281    282\n",
-       "282    283\n",
-       "283    284\n",
-       "284    285\n",
-       "285    286\n",
-       "286    287\n",
-       "287    288\n",
-       "288    289\n",
-       "289    290\n",
-       "290    291\n",
-       "291    292\n",
-       "292    293\n",
-       "293    294\n",
-       "294    295\n",
-       "295    296\n",
-       "296    297\n",
-       "297    298\n",
-       "298    299\n",
-       "299    300\n",
-       "Name: 0, Length: 300, dtype: int64"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def NMI(C, GT):\n",
+    "def entropy(data):\n",
+    "    n = len(data)\n",
+    "    value = 0\n",
+    "    for i in np.unique(data):\n",
+    "        p = len(data[data == i]) / n\n",
+    "        value += - p * np.log2(p)\n",
+    "    return value\n",
+    "    \n",
+    "def NMI(C, T):\n",
     "    score = 0\n",
+    "    n = len(C)\n",
+    "    H_C = entropy(C[1])\n",
+    "    H_T = entropy(T[1])\n",
+    "    \n",
+    "    C_Cluster = np.unique(C[1])\n",
+    "    T_Cluster = np.unique(T[1])\n",
+    "    pC = [len(C[C[1] == i]) / n for i in C_Cluster]\n",
+    "    pT = [len(T[T[1] == i]) / n for i in T_Cluster]\n",
+    "    for i in range(0, len(pC)):\n",
+    "        Ci = C[C[1] == C_Cluster[i]]\n",
+    "        Ti = T.loc[Ci.index]\n",
+    "        for j in range(0, len(pT)):\n",
+    "            p_ij = len(Ti[Ti[1] == T_Cluster[j]]) / n\n",
+    "            if p_ij > 0:\n",
+    "                score += p_ij * np.log2(p_ij / (pC[i] * pT[j]))\n",
+    "    \n",
+    "    score /= np.sqrt(H_C * H_T)\n",
     "    \n",
     "    return score\n",
     "\n",
-    "def Jaccard(C, GT):\n",
+    "def Jaccard(C, T):\n",
     "    score = 0\n",
     "    \n",
     "    return score"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([  1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,  13,\n",
-       "        14,  15,  16,  17,  18,  19,  20,  21,  22,  23,  24,  25,  26,\n",
-       "        27,  28,  29,  30,  31,  32,  33,  34,  35,  36,  37,  38,  39,\n",
-       "        40,  41,  42,  43,  44,  45,  46,  47,  48,  49,  50,  51,  52,\n",
-       "        53,  54,  55,  56,  57,  58,  59,  60,  61,  62,  63,  64,  65,\n",
-       "        66,  67,  68,  69,  70,  71,  72,  73,  74,  75,  76,  77,  78,\n",
-       "        79,  80,  81,  82,  83,  84,  85,  86,  87,  88,  89,  90,  91,\n",
-       "        92,  93,  94,  95,  96,  97,  98,  99, 100, 101, 102, 103, 104,\n",
-       "       105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115, 116, 117,\n",
-       "       118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130,\n",
-       "       131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143,\n",
-       "       144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156,\n",
-       "       157, 158, 159, 160, 161, 162, 163, 164, 165, 166, 167, 168, 169,\n",
-       "       170, 171, 172, 173, 174, 175, 176, 177, 178, 179, 180, 181, 182,\n",
-       "       183, 184, 185, 186, 187, 188, 189, 190, 191, 192, 193, 194, 195,\n",
-       "       196, 197, 198, 199, 200, 201, 202, 203, 204, 205, 206, 207, 208,\n",
-       "       209, 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221,\n",
-       "       222, 223, 224, 225, 226, 227, 228, 229, 230, 231, 232, 233, 234,\n",
-       "       235, 236, 237, 238, 239, 240, 241, 242, 243, 244, 245, 246, 247,\n",
-       "       248, 249, 250, 251, 252, 253, 254, 255, 256, 257, 258, 259, 260,\n",
-       "       261, 262, 263, 264, 265, 266, 267, 268, 269, 270, 271, 272, 273,\n",
-       "       274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286,\n",
-       "       287, 288, 289, 290, 291, 292, 293, 294, 295, 296, 297, 298, 299, 300], dtype=int64)"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
