Done and Submitted PA5

--- a/code/PA5/PA5.ipynb
+++ b/code/PA5/PA5.ipynb
@@ -21,10 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from operator import mul    # or mul=lambda x,y:x*y\n",
+    "from fractions import Fraction\n",
+    "from functools import reduce\n",
+    "\n",
     "def entropy(data):\n",
     "    n = len(data)\n",
     "    value = 0\n",
@@ -55,10 +59,61 @@
     "    \n",
     "    return score\n",
     "\n",
+    "def nCk(n,k):\n",
+    "    return int( reduce(mul, (Fraction(n-i, i+1) for i in range(k)), 1) )\n",
+    "\n",
     "def Jaccard(C, T):\n",
-    "    score = 0\n",
+    "    n = len(C)\n",
+    "    C_Cluster = np.unique(C[1])\n",
+    "    T_Cluster = np.unique(T[1])\n",
     "    \n",
-    "    return score"
+    "    TP = 0\n",
+    "    for i in C_Cluster:\n",
+    "        Ci = C[C[1] == i]\n",
+    "        Ti = T.loc[Ci.index]\n",
+    "        for j in T_Cluster:\n",
+    "            n_ij = len(Ti[Ti[1] == j])\n",
+    "            TP += n_ij ** 2\n",
+    "    TP = (TP - n) / 2\n",
+    "    \n",
+    "    FN = 0\n",
+    "    for j in T_Cluster:\n",
+    "        m_j = len(T[T[1] == j])\n",
+    "        FN += nCk(m_j, 2)\n",
+    "    FN -= TP\n",
+    "    \n",
+    "    FP = 0\n",
+    "    for i in C_Cluster:\n",
+    "        n_i = len(C[C[1] == i])\n",
+    "        FP += nCk(n_i, 2)\n",
+    "    FP -= TP\n",
+    "    \n",
+    "    return TP / (TP + FN + FP)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8896 0.9117\n",
+      "0.6456 0.6795\n",
+      "0.3915 0.4649\n",
+      "0.7678 0.8006\n",
+      "0.7612 0.5976\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"%1.4f %1.4f\"%(NMI(cluster1, ground_truth), Jaccard(cluster1, ground_truth)))\n",
+    "print(\"%1.4f %1.4f\"%(NMI(cluster2, ground_truth), Jaccard(cluster2, ground_truth)))\n",
+    "print(\"%1.4f %1.4f\"%(NMI(cluster3, ground_truth), Jaccard(cluster3, ground_truth)))\n",
+    "print(\"%1.4f %1.4f\"%(NMI(cluster4, ground_truth), Jaccard(cluster4, ground_truth)))\n",
+    "print(\"%1.4f %1.4f\"%(NMI(cluster5, ground_truth), Jaccard(cluster5, ground_truth)))"
    ]
   }
  ],
@@ -78,7 +133,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
