--- a/code/PA6/tree.ipynb
+++ b/code/PA6/tree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,21 +14,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv('training.txt', sep=' ', header = None)\n",
-    "train_label = np.array(data[0])\n",
-    "train_feature = np.array(data.iloc[:,1:])\n",
+    "data = np.array(data)\n",
+    "train_label = np.array(data[:,0])\n",
+    "\n",
+    "#train_feature = np.array(data.iloc[:,1:])\n",
+    "train_feature = np.ones((data.shape[0], data.shape[1]-1))\n",
     "\n",
     "for i in range(0, train_feature.shape[0]):\n",
-    "    train_feature[i] = [int(d.split(':')[1]) for d in train_feature[i]]"
+    "    train_feature[i] = [int(d.split(':')[1]) for d in data[i][1:]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(2.0, 1807)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#np.bincount(train_feature[1])\n",
+    "from collections import Counter\n",
+    "b = Counter(train_feature[:,0])\n",
+    "print(b.most_common(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -43,8 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def gini(feature_values, labels):\n",
@@ -70,28 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3000, 128)"
+       "array([2, 3, 2, 1, 2, 3, 2, 3, 2, 2, 2, 2, 2, 1, 2, 2, 2, 2, 2, 1, 1, 1, 2,\n",
+       "       2, 1, 3, 1, 3, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 1, 1, 2,\n",
+       "       2, 2, 2, 1, 3, 2, 3, 3, 1, 2, 2, 3, 1, 3, 2, 2, 3, 1, 2, 2, 2, 1, 2,\n",
+       "       3, 2, 3, 2, 2, 2, 2, 2, 1, 1, 2, 2, 1, 2, 1, 1, 1, 3, 2, 2, 3, 1, 3,\n",
+       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 2, 1, 1, 2, 2, 2, 2, 1, 3,\n",
+       "       2, 3, 2, 1, 1, 2, 3, 1, 3, 2, 3, 3, 1], dtype=object)"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_feature.shape"
+    "#np.bincount([1,2,3,1])\n",
+    "\n",
+    "train_feature[1]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 315,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b=np.zeros((train_feature.shape[0], train_feature.shape[1] + 1))\n",
@@ -143,7 +177,9 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a=np.hstack(([[i] for i in range(0, train_feature.shape[0])], train_feature))"
@@ -283,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.4"
   }
  },
  "nbformat": 4,
