--- a/code/PA6/tree.ipynb
+++ b/code/PA6/tree.ipynb
@@ -31,22 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(2.0, 1807)]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#np.bincount(train_feature[1])\n",
     "from collections import Counter\n",
     "b = Counter(train_feature[:,0])\n",
-    "print(b.most_common(1))"
+    "b.most_common(2)[0][0]"
    ]
   },
   {
