Add predict function

--- a/code/PA6/tree.ipynb
+++ b/code/PA6/tree.ipynb
@@ -15,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv('training.txt', sep=' ', header = None)\n",
@@ -216,22 +218,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 373,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1, 2, 3]"
+       "True"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 373,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[1,2]+[3]"
+    "a={1:11,2:22,3:33}\n",
+    "3 in a"
    ]
   },
   {
@@ -322,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
